Keep "x" button alignment constant [fixes #150918623]

--- a/grails-app/assets/stylesheets/elurikkus-common.css
+++ b/grails-app/assets/stylesheets/elurikkus-common.css
@@ -642,13 +642,6 @@ body {
     cursor: pointer;
 }
 
-@media(max-width: 450px) {
-    .burger__close-button {
-        top: 10px;
-        right: 10px;
-    }
-}
-
 .burger__open-button {
     height: 2rem;
     line-height: 2rem;
